...
          ),
          bottom: const TabBar(
            labelColor: Color(0xFF975B73),
            unselectedLabelColor: Colors.grey,
            indicatorColor: Color(0xFF975B73),
            tabs: [
              Tab(text: "Templates"),
              Tab(text: "Custom Design"),
            ],
          ),
          actions: [
            if (widget.reservation != null)
              IconButton(
                icon: const Icon(Icons.check_circle, color: Colors.green),
...
                            child: CircularProgressIndicator(
                                color: Colors.white, strokeWidth: 2))
                        : Row(
                            mainAxisAlignment: MainAxisAlignment.center,
                            children: const [
                              Text(
                                "Generate & Finish",
                                style: TextStyle(
                                  fontFamily: "Poppins",
                                  fontSize: 14, // Slightly smaller to fit
                                  fontWeight: FontWeight.bold,
                                  color: Colors.white,
                                ),
...
